Resource including - same as top of file

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
 <body>
 <app>Loading...</app>
 
-<script src="https://cdn.jsdelivr.net/alertifyjs/1.7.1/alertify.min.js"></script>
+<script src="//cdn.jsdelivr.net/alertifyjs/1.7.1/alertify.min.js"></script>
 
 </body>
 </html>
