--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
 
   <link href="//cdn.jsdelivr.net/alertifyjs/1.7.1/css/alertify.min.css" rel="stylesheet"/>
   <link href="//cdn.jsdelivr.net/alertifyjs/1.7.1/css/themes/default.min.css" rel="stylesheet"/>
+  <link href="../node_modules/font-awesome/css/font-awesome.css" rel="stylesheet"/>
   <style>
     body {
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
